# Geometric-Modelling

./: .gitignore  CMakeLists.txt  README.md  build.sh  helperFunctions.h  macos_perf.mm  main.cpp  meshviewer_glut.h  myFace.cpp  myMesh.cpp  myMesh.h  myVertex.cpp  run.sh
GL/: apple_glut_compat.h  freeglut.h
scripts/: setup-macos.sh
shaders/: light.frag.glsl  light.vert.glsl
